# Airflight-Booking-System

./: CMakeLists.txt  main.cpp
Classes/: AirlineSystemManager.cpp  AirlineSystemManager.h  Airplane.cpp  Airplane.h  FileHandler.cpp  FileHandler.h  FileReader.cpp  FileReader.h  Text.cpp  Text.h  Ticket.cpp  Ticket.h
